# autoparallel

./: .coverage  AGENT.md  IDEAS.md  IMPLEMENTATION_PLAN.md  README.md  conftest.py  final_debug.py  fix_plan.md  pyproject.toml
docs/: vllm_config_system.md
examples/: README.md  basic_usage.py  batch_optimization.py  memory_check.py  vllm_config_optimization.py  vllm_memory_estimation.py
prompts/: PROMPT.md  PROMPT_PLAN.md  modaltest.py
spec/: autoparallel_architecture.md  memory_estimation_framework.md  public_api_specification.md  simplified_testing_strategy.md  testing_validation_strategy.md  vllm_autotuning_spec.md
src/autoparallel/: __init__.py  constraints.py  constraints_test.py  grid_search.py  grid_search_test.py  memory.py  memory_test.py  public_api.py  public_api_test.py
src/autoparallel/api/: __init__.py  advanced.py  advanced_test.py  simple.py  simple_test.py
src/autoparallel/cluster/: __init__.py
src/autoparallel/config/: __init__.py  generator.py  generator_test.py  optimizer.py  optimizer_test.py  validator.py  validator_test.py
src/autoparallel/constraints/: __init__.py  analyzer.py  analyzer_test.py  model_support.py  model_support_test.py  validation.py  validation_test.py
src/autoparallel/deployment/: __init__.py  vllm_commands.py  vllm_commands_test.py
src/autoparallel/frameworks/: __init__.py  vllm_config.py  vllm_config_test.py  vllm_memory.py  vllm_memory_test.py  vllm_optimizer.py  vllm_optimizer_test.py
src/autoparallel/memory/: __init__.py  components.py  components_test.py  config.py  config_test.py  estimator.py  (+1 more)
(+2 files in other folders)
