[project]
name = "autoparallel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Mancuso", email = "7891333+jvmncs@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "PTH"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"



[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"
